<resources>
    <string name="app_name">SeLigaTurista</string>
    <string name="btn_consultar">Consultar</string>
    <string name="titulo">Documentos necessários para a sua viagem</string>
    <string name="subtitulo">Escolha o seu destino e saiba os detalhes sobre documentos.</string>
    <string name="add_destino">Adicionar Destino</string>
    <string name="hint_word">Destino</string>
    <string name="btn_salvar">Salvar</string>
    <string name="nomeDestino">Destino</string>
    <string name="descricao">Descrição</string>
    <string name="textAdicionar">Clique no botão abaixo para adicionar um destino</string>
    <string name="hint_destino">Destino</string>
    <string name="hint_descricao">Descrição</string>
    <string name="btn_adicionar">Adicionar</string>
    <string name="info">Carteira Nacional de Habilitação (CNH-e)
Documento Nacional de Identidade (DNI)
Título de Eleitor, desde que possua foto (para aqueles que já realizaram a biometria perante o
        Tribunal Regional Eleitoral de seu Estado). Passagem de retorno: alguns países pedem
        passagem de volta ao local de origem ou para outro destino. Isso pode acontecer em viagens
        de turismo, negócios ou de estudo. A ideia é garantir que a pessoa não permaneça no país
        além do necessário. Certificado de vacina: confira se o seu destino não pede vacinas
        específicas para determinadas doenças regionais. Saiba mais detalhes sobre a exigência de
        vacinas para viagens. Comprovação monetária: ao chegar ao país, pode ser necessário indicar
        se você possui recursos suficientes para o período de permanência.</string>
    <string name="btn_saiba_mais">Saiba Mais</string>
    <string name="titulo_info">Documentos para viajar</string>
    <string name="titulo_destino">Adicione um destino para sua próxima viagem</string>
    <string name="hint_data">Data</string>
    <string name="textSelecione">Selecione um destino</string>
</resources>