<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity2">

    <!--edit text for adding course name-->
    <EditText
        android:id="@+id/editTextNomeDestino"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_toStartOf="@id/idBtnSave"
        android:layout_toLeftOf="@id/idBtnSave"
        android:hint="@string/hint_destino" />

    <!--edit text for adding course description-->
    <EditText
        android:id="@+id/editTextDescricao"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/editTextNomeDestino"
        android:layout_marginEnd="4dp"
        android:layout_marginRight="4dp"
        android:layout_toLeftOf="@id/idBtnAdd"
        android:hint="@string/hint_descricao" />

    <!--button for adding data to recycler view-->

    <!--button for saving data to shared prefs-->
    <Button
        android:id="@+id/idBtnAdd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/editTextNomeDestino"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_margin="10dp"
        android:layout_marginTop="33dp"
        android:layout_marginEnd="301dp"
        android:layout_marginRight="301dp"
        android:text="@string/btn_adicionar" />

    <Button
        android:id="@+id/idBtnSave"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_margin="10dp"
        android:text="@string/btn_salvar" />

    <!--recycler view to display our data-->
    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerViewViagem"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/editTextDescricao" />

</RelativeLayout>