<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    tools:context=".InfoDocumentos">

    <TextView
        android:id="@+id/titulo_info"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:padding="6dp"
        android:text="@string/titulo_info"
        android:textStyle="bold"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/informacoes"
        android:layout_width="0dp"
        android:layout_height="250dp"
        android:padding="6dp"
        android:textStyle="bold"
        android:textSize="12sp"
        android:text="@string/info"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/titulo_info"
        />

    <Button
        android:id="@+id/btnSaibaMais"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:padding="6dp"
        android:layout_marginTop="10dp"
        android:text="@string/btn_saiba_mais"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/informacoes"/>

    <TextView
        android:id="@+id/textAdicionar"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:padding="6dp"
        android:text="@string/textAdicionar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btnSaibaMais"/>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/infoBtnAdicionar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_marginTop="0dp"
        android:layout_marginEnd="0dp"
        android:src="@drawable/ic_add"

        app:backgroundTint="@color/teal_900_light"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textAdicionar" />

</androidx.constraintlayout.widget.ConstraintLayout>